@@ -5,10 +5,10 @@ package harddrake::sound;
 #    o isa cards: msnd_pinnacle, pas2, 
 #    o pci cards: ad1889, sam9407
 # No OSS for ALSA's
-#    o pci cards: snd-als4000, snd-es968, snd-hdsp
-#    o isa cards: snd-azt2320, snd-cs4231, snd-cs4236, 
-#      snd-dt0197h, snd-korg1212, snd-rme32
-#    o pcmcia cards: snd-vxp440 snd-vxpocket
+#    o pci cards: snd_als4000, snd_es968, snd_hdsp
+#    o isa cards: snd_azt2320, snd_cs4231, snd_cs4236, 
+#      snd_dt0197h, snd_korg1212, snd_rme32
+#    o pcmcia cards: snd_vxp440 snd_vxpocket
 
 # TODO: 
 #    o ensure sound is not user (either dsp/midi/sequencer/mixer)
@@ -25,157 +25,157 @@ use log;
 
 our %alsa2oss = 
     (
-     if_(arch() =~ /ppc/, "snd-powermac" => [ "dmasound_pmac" ]),
+     if_(arch() =~ /ppc/, "snd_powermac" => [ "dmasound_pmac" ]),
      if_(arch() =~ /sparc/,
-         "snd-sun-amd7930" => [ "unknown" ],
-         "snd-sun-cs4231" => [ "unknown" ],
-         "snd-sun-dbri" => [ "unknown" ],
+         "snd_sun_amd7930" => [ "unknown" ],
+         "snd_sun_cs4231" => [ "unknown" ],
+         "snd_sun_dbri" => [ "unknown" ],
         ),
-     "snd-ad1816a" => [ "ad1816" ], # isa
-     "snd-ad1848"  => [ "ad1848", "pss" ], # isa
-     "snd-ad1889"  => [ "ad1889" ],
-     "snd-ali5451" => [ "trident" ],
-     "snd-als100"  => [ "sb" ], # isa
-     "snd-als300"  => [ "unknown" ],
-     "snd-als4000" => [ "unknown" ],
-     "snd-aoa"     => [ "unknown" ],
-     "snd-asihpi"  => [ "unknown" ],
-     "snd-atiixp"  => [ "unknown" ],
-     "snd-au8810"  => [ "unknown" ],
-     "snd-au8820"  => [ "unknown" ],
-     "snd-au8830"  => [ "unknown" ],
-     "snd-audigyls" => [ "unknown" ], # pci, renamed as snd-ca0106
-     "snd-azt2320" => [ "unknown" ], # isa
-     "snd-azt3328" => [ "unknown" ], # isa
-     "snd-azx"     => [ "unknown" ],
-     "snd-bt87x"   => [ "btaudio" ],
-     "snd-ca0106"  => [ "unknown" ], # pci
-     "snd-cmi8330" => [ "sb" ], # isa
-     "snd-cmi8788" => [ "unknown" ], # pci
-     "snd-cmipci"  => [ "cmpci" ],
-     "snd-cs4231"  => [ "unknown" ], # isa
-     "snd-cs4232"  => [ "cs4232" ],  # isa
-     "snd-cs4236"  => [ "ad1848" ], # isa
-     "snd-cs4281"  => [ "cs4281" ],
-     "snd-cs46xx"  => [ "cs46xx" ],
-     "snd-cs5530"  => [ "unknown" ],
-     "snd-cs5535audio" => [ "unknown" ],
-     "snd-darla20" => [ "unknown" ],
-     "snd-darla24" => [ "unknown" ],
-     "snd-dt0197h" => [ "unknown" ], # isa
-     "snd-dt019x"  => [ "unknown" ], # isa
-     "snd-echo3g"  => [ "unknown" ],
-     "snd-emu10k1" => [ "audigy", "emu10k1" ],
-     "snd-emu10k1x" => [ "unknown" ],
-     "snd-ens1370" => [ "es1370" ],
-     "snd-ens1371" => [ "es1371" ],
-     "snd-es1688"  => [ "sb" ], # isa
-     "snd-es18xx"  => [ "sb" ], # isa
-     "snd-es1938"  => [ "esssolo1" ],
-     "snd-es1968"  => [ "maestro" ], # isa
-     "snd-es968"   => [ "sb" ],
-     "snd-fm801"   => [ "forte" ],
-     "snd-gina20"  => [ "unknown" ],
-     "snd-gina24"  => [ "unknown" ],
-     "snd-gina3g"  => [ "unknown" ],
-     "snd-gusclassic" => [ "gus" ], # isa
-     "snd-gusextreme" => [ "gus" ], # isa
-     "snd-gusmax"  => [ "gus" ],    # isa
-     "snd-hda-intel"    => [ "unknown" ],
-     "snd-hdspm"   => [ "unknown" ],
-     "snd-hdsp"    => [ "unknown" ],
-     "snd-ice1712" => [ "unknown" ], # isa
-     "snd-ice1724" => [ "unknown" ], # isa
-     "snd-indi"    => [ "unknown" ], # pci
-     "snd-indigo"  => [ "unknown" ], # pci
-     "snd-indigodj" => [ "unknown" ], # pci
-     "snd-indigoio" => [ "unknown" ], # pci
-     "snd-intel8x0" => [ "ali5455", "i810_audio", "nvaudio" ],
-     "snd-interwave" => [ "gus" ],  # isa
-     "snd-interwave-stb" => [ "unknown" ], # isa
-     "snd-korg1212" => [ "unknown" ], # isa
-     "snd-layla20" => [ "unknown" ],
-     "snd-layla24" => [ "unknown" ],
-     "snd-layla3g" => [ "unknown" ],
-     "snd-maestro3" => [ "maestro3" ],
-     "snd-mia"     => [ "unknown" ],
-     "snd-mixart"  => [ "unknown" ],
-     "snd-mona"    => [ "unknown" ],
-     "snd-mpu401"  => [ "mpu401" ],
-     "snd-nm256"   => [ "nm256_audio" ],
-     "snd-opl3sa2" => [ "opl3", "opl3sa", "opl3sa2" ], # isa
-     "snd-opti92x-ad1848" => [ "unknown" ], # isa
-     "snd-opti92x-cs4231" => [ "unknown" ], # isa
-     "snd-opti93x" => [ "mad16" ],
-     "snd-pcxhr"   => [ "unknown" ], # pci
-     "snd-riptide"    => [ "unknown" ],
-     "snd-rme32"   => [ "unknown" ], # isa
-     "snd-rme96"   => [ "rme96xx" ], # pci
-     "snd-rme9652" => [ "rme96xx" ], # pci
-     "snd-sb16"    => ["sscape", "sb"],
-     "snd-sb8"     => [ "sb" ],
-     "snd-sbawe"   => [ "awe_wave" ],
-     "snd-sgalaxy" => [ "sgalaxy" ], # isa
-     "snd-sonicvibes" => [ "sonicvibes" ],
-     "snd-sscape"  => [ "sscape" ], # isa
-     "snd-trident" => [ "trident" ],
-     "snd-usb-audio" => [ "audio" ], # usb
-     "snd-usb-caiaq"  => [ "unknown" ],
-     "snd-usb-usx2y"  => [ "unknown" ],
-     "snd-via82xx"  => [ "via82cxxx_audio" ],
-     "snd-vx222"   => [ "unknown" ],
-     "snd-vxp440"  => [ "unknown" ], # pcmcia
-     "snd-vxpocket" => [ "unknown" ], # pcmcia
-     "snd-wavefront" => [ "wavefront" ], # isa
-     "snd-ymfpci"  => [ "ymfpci" ],
+     "snd_ad1816a" => [ "ad1816" ], # isa
+     "snd_ad1848"  => [ "ad1848", "pss" ], # isa
+     "snd_ad1889"  => [ "ad1889" ],
+     "snd_ali5451" => [ "trident" ],
+     "snd_als100"  => [ "sb" ], # isa
+     "snd_als300"  => [ "unknown" ],
+     "snd_als4000" => [ "unknown" ],
+     "snd_aoa"     => [ "unknown" ],
+     "snd_asihpi"  => [ "unknown" ],
+     "snd_atiixp"  => [ "unknown" ],
+     "snd_au8810"  => [ "unknown" ],
+     "snd_au8820"  => [ "unknown" ],
+     "snd_au8830"  => [ "unknown" ],
+     "snd_audigyls" => [ "unknown" ], # pci, renamed as snd_ca0106
+     "snd_azt2320" => [ "unknown" ], # isa
+     "snd_azt3328" => [ "unknown" ], # isa
+     "snd_azx"     => [ "unknown" ],
+     "snd_bt87x"   => [ "btaudio" ],
+     "snd_ca0106"  => [ "unknown" ], # pci
+     "snd_cmi8330" => [ "sb" ], # isa
+     "snd_cmi8788" => [ "unknown" ], # pci
+     "snd_cmipci"  => [ "cmpci" ],
+     "snd_cs4231"  => [ "unknown" ], # isa
+     "snd_cs4232"  => [ "cs4232" ],  # isa
+     "snd_cs4236"  => [ "ad1848" ], # isa
+     "snd_cs4281"  => [ "cs4281" ],
+     "snd_cs46xx"  => [ "cs46xx" ],
+     "snd_cs5530"  => [ "unknown" ],
+     "snd_cs5535audio" => [ "unknown" ],
+     "snd_darla20" => [ "unknown" ],
+     "snd_darla24" => [ "unknown" ],
+     "snd_dt0197h" => [ "unknown" ], # isa
+     "snd_dt019x"  => [ "unknown" ], # isa
+     "snd_echo3g"  => [ "unknown" ],
+     "snd_emu10k1" => [ "audigy", "emu10k1" ],
+     "snd_emu10k1x" => [ "unknown" ],
+     "snd_ens1370" => [ "es1370" ],
+     "snd_ens1371" => [ "es1371" ],
+     "snd_es1688"  => [ "sb" ], # isa
+     "snd_es18xx"  => [ "sb" ], # isa
+     "snd_es1938"  => [ "esssolo1" ],
+     "snd_es1968"  => [ "maestro" ], # isa
+     "snd_es968"   => [ "sb" ],
+     "snd_fm801"   => [ "forte" ],
+     "snd_gina20"  => [ "unknown" ],
+     "snd_gina24"  => [ "unknown" ],
+     "snd_gina3g"  => [ "unknown" ],
+     "snd_gusclassic" => [ "gus" ], # isa
+     "snd_gusextreme" => [ "gus" ], # isa
+     "snd_gusmax"  => [ "gus" ],    # isa
+     "snd_hda_intel"    => [ "unknown" ],
+     "snd_hdspm"   => [ "unknown" ],
+     "snd_hdsp"    => [ "unknown" ],
+     "snd_ice1712" => [ "unknown" ], # isa
+     "snd_ice1724" => [ "unknown" ], # isa
+     "snd_indi"    => [ "unknown" ], # pci
+     "snd_indigo"  => [ "unknown" ], # pci
+     "snd_indigodj" => [ "unknown" ], # pci
+     "snd_indigoio" => [ "unknown" ], # pci
+     "snd_intel8x0" => [ "ali5455", "i810_audio", "nvaudio" ],
+     "snd_interwave" => [ "gus" ],  # isa
+     "snd_interwave_stb" => [ "unknown" ], # isa
+     "snd_korg1212" => [ "unknown" ], # isa
+     "snd_layla20" => [ "unknown" ],
+     "snd_layla24" => [ "unknown" ],
+     "snd_layla3g" => [ "unknown" ],
+     "snd_maestro3" => [ "maestro3" ],
+     "snd_mia"     => [ "unknown" ],
+     "snd_mixart"  => [ "unknown" ],
+     "snd_mona"    => [ "unknown" ],
+     "snd_mpu401"  => [ "mpu401" ],
+     "snd_nm256"   => [ "nm256_audio" ],
+     "snd_opl3sa2" => [ "opl3", "opl3sa", "opl3sa2" ], # isa
+     "snd_opti92x_ad1848" => [ "unknown" ], # isa
+     "snd_opti92x_cs4231" => [ "unknown" ], # isa
+     "snd_opti93x" => [ "mad16" ],
+     "snd_pcxhr"   => [ "unknown" ], # pci
+     "snd_riptide"    => [ "unknown" ],
+     "snd_rme32"   => [ "unknown" ], # isa
+     "snd_rme96"   => [ "rme96xx" ], # pci
+     "snd_rme9652" => [ "rme96xx" ], # pci
+     "snd_sb16"    => ["sscape", "sb"],
+     "snd_sb8"     => [ "sb" ],
+     "snd_sbawe"   => [ "awe_wave" ],
+     "snd_sgalaxy" => [ "sgalaxy" ], # isa
+     "snd_sonicvibes" => [ "sonicvibes" ],
+     "snd_sscape"  => [ "sscape" ], # isa
+     "snd_trident" => [ "trident" ],
+     "snd_usb_audio" => [ "audio" ], # usb
+     "snd_usb_caiaq"  => [ "unknown" ],
+     "snd_usb_usx2y"  => [ "unknown" ],
+     "snd_via82xx"  => [ "via82cxxx_audio" ],
+     "snd_vx222"   => [ "unknown" ],
+     "snd_vxp440"  => [ "unknown" ], # pcmcia
+     "snd_vxpocket" => [ "unknown" ], # pcmcia
+     "snd_wavefront" => [ "wavefront" ], # isa
+     "snd_ymfpci"  => [ "ymfpci" ],
      );
 
 
 our %oss2alsa = 
     (
-     if_(arch() =~ /ppc/, "dmasound_pmac" => [ "snd-powermac" ]),
-     "ad1816"  => [ "snd-ad1816a" ],
-     "ad1848"  => [ "snd-ad1848", "snd-cs4236" ],
-     "ad1889"  => [ "snd-ad1889" ],
-     "ali5455" => [ "snd-intel8x0" ],
-     "audigy"  => [ "snd-emu10k1" ],
-     "audio"   => [ "snd-usb-audio" ], # usb
-     "awe_wave" => [ "snd-sbawe" ],
-     "btaudio" => [ "snd-bt87x" ],
-     "cmpci"   => [ "snd-cmipci" ],
-     "cs4232"  => [ "snd-cs4232" ],
-     "cs4281"  => [ "snd-cs4281" ],
-     "cs46xx"  => [ "snd-cs46xx" ],
-     "emu10k1" => [ "snd-emu10k1" ],
-     "es1370"  => [ "snd-ens1370" ],
-     "es1371"  => [ "snd-ens1371" ],
-     "esssolo1" => [ "snd-es1938" ],
-     "forte"   => [ "snd-fm801" ],
-     "gus"     => ["snd-interwave", "snd-gusclassic", "snd-gusmax", "snd-gusextreme"],
-     "i810_audio" => [ "snd-intel8x0" ],
-     "ice1712" => [ "snd-ice1712" ],
-     "mad16"   => [ "snd-opti93x" ],
-     "maestro" => [ "snd-es1968" ],
-     "maestro3" => [ "snd-maestro3" ],
-     "mpu401"  => [ "snd-mpu401" ],
+     if_(arch() =~ /ppc/, "dmasound_pmac" => [ "snd_powermac" ]),
+     "ad1816"  => [ "snd_ad1816a" ],
+     "ad1848"  => [ "snd_ad1848", "snd_cs4236" ],
+     "ad1889"  => [ "snd_ad1889" ],
+     "ali5455" => [ "snd_intel8x0" ],
+     "audigy"  => [ "snd_emu10k1" ],
+     "audio"   => [ "snd_usb_audio" ], # usb
+     "awe_wave" => [ "snd_sbawe" ],
+     "btaudio" => [ "snd_bt87x" ],
+     "cmpci"   => [ "snd_cmipci" ],
+     "cs4232"  => [ "snd_cs4232" ],
+     "cs4281"  => [ "snd_cs4281" ],
+     "cs46xx"  => [ "snd_cs46xx" ],
+     "emu10k1" => [ "snd_emu10k1" ],
+     "es1370"  => [ "snd_ens1370" ],
+     "es1371"  => [ "snd_ens1371" ],
+     "esssolo1" => [ "snd_es1938" ],
+     "forte"   => [ "snd_fm801" ],
+     "gus"     => ["snd_interwave", "snd_gusclassic", "snd_gusmax", "snd_gusextreme"],
+     "i810_audio" => [ "snd_intel8x0" ],
+     "ice1712" => [ "snd_ice1712" ],
+     "mad16"   => [ "snd_opti93x" ],
+     "maestro" => [ "snd_es1968" ],
+     "maestro3" => [ "snd_maestro3" ],
+     "mpu401"  => [ "snd_mpu401" ],
      "msnd_pinnacle" => [ "unknown" ],
-     "nm256_audio" => [ "snd-nm256" ],
-     "nvaudio" => [ "snd-intel8x0" ],
-     "opl3"    => [ "snd-opl3sa2" ],
-     "opl3sa"  => [ "snd-opl3sa2" ],
-     "opl3sa2" => [ "snd-opl3sa2" ],
+     "nm256_audio" => [ "snd_nm256" ],
+     "nvaudio" => [ "snd_intel8x0" ],
+     "opl3"    => [ "snd_opl3sa2" ],
+     "opl3sa"  => [ "snd_opl3sa2" ],
+     "opl3sa2" => [ "snd_opl3sa2" ],
      "pas2"    => [ "unknown" ],
-     "pss"     => [ "snd-ad1848" ],
-     "rme96xx" => [ "snd-rme96", "snd-rme9652" ],
+     "pss"     => [ "snd_ad1848" ],
+     "rme96xx" => [ "snd_rme96", "snd_rme9652" ],
      "sam9407" => [ "unknown" ],
-     "sb"      => [ "snd-als100", "snd-cmi8330", "snd-es1688", "snd-es18xx", "snd-es968", "snd-sb8", "snd-sb16" ],
-     "sgalaxy" => [ "snd-sgalaxy" ],
-     "sonicvibes" => [ "snd-sonicvibes" ],
-     "sscape"  => [ "snd-sb16", "snd-sscape" ],
-     "trident" => [ "snd-ali5451", "snd-trident" ],
-     "via82cxxx_audio" => [ "snd-via82xx" ],
-     "wavefront" => [ "snd-wavefront" ],
-     "ymfpci"  => [ "snd-ymfpci" ],
+     "sb"      => [ "snd_als100", "snd_cmi8330", "snd_es1688", "snd_es18xx", "snd_es968", "snd_sb8", "snd_sb16" ],
+     "sgalaxy" => [ "snd_sgalaxy" ],
+     "sonicvibes" => [ "snd_sonicvibes" ],
+     "sscape"  => [ "snd_sb16", "snd_sscape" ],
+     "trident" => [ "snd_ali5451", "snd_trident" ],
+     "via82cxxx_audio" => [ "snd_via82xx" ],
+     "wavefront" => [ "snd_wavefront" ],
+     "ymfpci"  => [ "snd_ymfpci" ],
      );
 
 my @blacklist = qw(cs46xx cs4281);
@@ -202,13 +202,13 @@ sub do_switch {
     log::explanations("removing old $old_driver\n");
     if ($::isStandalone) {
         rooted("service sound stop") unless $blacklisted;
-        rooted("service alsa stop") if $old_driver =~ /^snd-/ && !$blacklisted;
+        rooted("service alsa stop") if $old_driver =~ /^snd_/ && !$blacklisted;
         unload($old_driver);    # run_program("/sbin/modprobe -r $driver"); # just in case ...
     }
     $modules_conf->remove_module($old_driver);
     $modules_conf->set_sound_slot("sound-slot-$index", $new_driver);
     $modules_conf->write;
-    if ($new_driver =~ /^snd-/) {   # new driver is an alsa one
+    if ($new_driver =~ /^snd_/) {   # new driver is an alsa one
         $in->do_pkgs->ensure_binary_is_installed(qw(alsa-utils alsactl), 1);
         $in->do_pkgs->ensure_binary_is_installed(qw(aoss aoss), 1);
         rooted("service alsa start") if $::isStandalone && !$blacklisted;
@@ -249,7 +249,7 @@ sub switch {
                           #-PO: here the first %s is either "OSS" or "ALSA", 
                           #-PO: the second %s is the name of the current driver
                           #-PO: and the third %s is the name of the default driver
-				  N("\n\nYour card currently use the %s\"%s\" driver (default driver for your card is \"%s\")", ($driver =~ /^snd-/ ? "ALSA " : "OSS "), $driver, $device->{driver}),
+				  N("\n\nYour card currently use the %s\"%s\" driver (default driver for your card is \"%s\")", ($driver =~ /^snd_/ ? "ALSA " : "OSS "), $driver, $device->{driver}),
 				  interactive_help => sub {  
 				      N("OSS (Open Sound System) was the first sound API. It's an OS independent sound API (it's available on most UNIX(tm) systems) but it's a very basic and limited API.
 What's more, OSS drivers all reinvent the wheel.
@@ -270,7 +270,7 @@ To use alsa, one can either use:
                                     format => sub { my ($drv) = @_;
                                                     $drv eq 'unknown' ? $drv :
                                                       sprintf(($des{$drv} ? "$des{$drv} (%s [%s])"
-                                                                : "%s [%s]"), $drv, $drv =~ /^snd[-_]/ ? 'ALSA' : 'OSS');
+                                                                : "%s [%s]"), $drv, $drv =~ /^snd_/ ? 'ALSA' : 'OSS');
                                                 }
                                 },
                                 {
@@ -373,7 +373,7 @@ sub configure_sound_slots {
         if (!member($default_driver, @{get_alternative($_->{driver})}, $_->{driver})) {
             $altered ||= $default_driver;
             $modules_conf->set_sound_slot("sound-slot-$::i", $_->{driver});
-	    $modules_conf->set_options($_->{driver}, "xbox=1") if $_->{driver} eq "snd-intel8x0" && detect_devices::is_xbox();
+	    $modules_conf->set_options($_->{driver}, "xbox=1") if $_->{driver} eq "snd_intel8x0" && detect_devices::is_xbox();
         }
     } detect_devices::getSoundDevices();
     $modules_conf->write if $altered && $::isStandalone;
