@@ -1,3 +1,5 @@
+- use '_' in modules names
+
 Version 10.4.169 - 14 August 2007, by Thierry Vignaud
 
 - adduserdrake, finish-install:
